Completed AccountController and TransactionController unit tests.